--- a/kernel-dts/tegra194-soc/tegra194-soc-base.dtsi
+++ b/kernel-dts/tegra194-soc/tegra194-soc-base.dtsi
@@ -1193,13 +1193,8 @@
 			/* cfg page is used by slvsec as well as ch35 */
 			reg = <0x0 0x15c10000 0x0 0x00230000>,
 				<0x0 0x15f00000 0x0 0x00100000>;
-			resets = <&bpmp_resets TEGRA194_RESET_VI>,
-				 <&bpmp_resets TEGRA194_RESET_TSCTNVI>;
-			reset-names = "vi", "tsctnvi";
-			clocks = <&bpmp_clks TEGRA194_CLK_VI>,
-				 <&bpmp_clks TEGRA194_CLK_VI_CONST>;
-			clock-names = "vi", "vi-const";
-			power-domains = <&bpmp TEGRA194_POWER_DOMAIN_VE>;
+			clocks = <&bpmp_clks TEGRA194_CLK_VI>;
+			clock-names = "vi";
 
 			nvidia,vi-falcon-device = <&vi_thi>;
 
@@ -1219,11 +1214,8 @@
 		isp: isp@14800000 {
 			compatible = "nvidia,tegra194-isp";
 
-			resets = <&bpmp_resets TEGRA194_RESET_ISP>;
-			reset-names = "isp";
 			clocks = <&bpmp_clks TEGRA194_CLK_ISP>;
 			clock-names = "isp";
-			power-domains = <&bpmp TEGRA194_POWER_DOMAIN_ISPA>;
 
 			nvidia,isp-falcon-device = <&isp_thi>;
 
@@ -1237,15 +1229,8 @@
 
 		nvcsi: nvcsi@15a00000 {
 			compatible = "nvidia,tegra194-nvcsi";
-			power-domains = <&bpmp TEGRA194_POWER_DOMAIN_VE>;
-			resets = <&bpmp_resets TEGRA194_RESET_NVCSI>,
-				 <&bpmp_resets TEGRA194_RESET_MIPI_CAL>;
-			clocks = <&bpmp_clks TEGRA194_CLK_NVCSI>,
-				 <&bpmp_clks TEGRA194_CLK_NVCSILP>,
-				 <&bpmp_clks TEGRA194_CLK_MIPI_CAL>,
-				 <&bpmp_clks TEGRA194_CLK_UART_FST_MIPI_CAL>;
-			clock-names = "nvcsi", "nvcsilp",
-				      "mipi_cal", "uart_fs_mipi_cal";
+			clocks = <&bpmp_clks TEGRA194_CLK_NVCSI>;
+			clock-names = "nvcsi";
 		};
 
 		slvs_ec: slvs-ec@15ac0000 {
